plang/testing/logs/false-incorrect/4/program4.p.p.out
Error at y (Fe1Q) :- (((x (U7m) (tkV5 q0zg IJS EVNA (k1)) CmgY BsnHF; iS))), hx.:1:11 error: 
y (Fe1Q) :- (((x (U7m) (tkV5 q0zg IJS EVNA (k1)) CmgY BsnHF; iS))), hx.
          ^
Error at y (Fe1Q) :- (((x (U7m) (tkV5 q0zg IJS EVNA (k1)) CmgY BsnHF; iS))), hx.:1:59 error: 
y (Fe1Q) :- (((x (U7m) (tkV5 q0zg IJS EVNA (k1)) CmgY BsnHF; iS))), hx.
                                                          ^
Error at y (Fe1Q) :- (((x (U7m) (tkV5 q0zg IJS EVNA (k1)) CmgY BsnHF; iS))), hx.:1:63 error: 
y (Fe1Q) :- (((x (U7m) (tkV5 q0zg IJS EVNA (k1)) CmgY BsnHF; iS))), hx.
                                                              ^
Error at o (eX9 (u) (bLs wP1qc P RvN (CfZ))) :- (ai2 (jG (S70O) (bsHB (Ii) FdW) RKWB)).:24:38 error: 
o (eX9 (u) (bLs wP1qc P RvN (CfZ))) :- (ai2 (jG (S70O) (bsHB (Ii) FdW) RKWB)).
                                     ^
Error at o (eX9 (u) (bLs wP1qc P RvN (CfZ))) :- (ai2 (jG (S70O) (bsHB (Ii) FdW) RKWB)).:24:76 error: 
o (eX9 (u) (bLs wP1qc P RvN (CfZ))) :- (ai2 (jG (S70O) (bsHB (Ii) FdW) RKWB)).
                                                                           ^