plang/testing/logs/false-incorrect/4/program4.p.p
y (Fe1Q) :- (((x (U7m) (tkV5 q0zg IJS EVNA (k1)) CmgY BsnHF; iS))), hx.
o LPP (zTqJ1 (SceC)) (I8k).
jftkq (LETD2) Ws (K) (k B (jCF (wI3wV (eJ7Oo Z) XJa) (xOXQ rVp TVB70) yOtdY Ky6yT) (WI2) RZ).


rHmQ (OjF).

g (g9B8k (iblaW (by h04) V) ruta H n8E8) (cU2r8 cm R).


iOJ (vr9d (aW99E (V) E17D CIm4 (ZJR)) X52X) WrP8 :- x7 (iA9W (OvIh)) Zr FHQU.
iw96 (E) Efke :- p; mcpv (CSy) (bg) (XH) (uzld).
jF (zZlgF yINb (ovNV) (dfRd)) :- ilieM; pCX; xJd YY (W) udW, s (V3) (A) PGSP4; n6; d04j (HMk) (uIu nLhN5 (a3WD (kRyUW (t70 K GIqW0 Vu (Q0q)) (C7) As (oMi rWFNC It AadC)))), pRAw x dAK mOH (HT); b v3KP ej8 MvJ5r, (n), (lP3b1 t Wph2D pl1m (Cc)).

yeoO frf K EWY (Tkd).

y.

w (qMFm4 (Cgvk) (Nhs) (H92mE) (N)) (T) tTalJ (sS6q B UIBK Uz (t BPTq (Qi) Zc)).

g1fet (dl2G0) (rn).

t6fCA vH C FxcFF.
o (eX9 (u) (bLs wP1qc P RvN (CfZ))) :- (ai2 (jG (S70O) (bsHB (Ii) FdW) RKWB)).


f qPz (wa7 (wRZ5 Tf30) (S2Lp) S) Yk eqoBs.
koOlm NqJl TFSU ID0wr.


? hCadQ x2ed4.
